# open-healthcare-prebuilt-services

./: .gitignore  Ballerina.toml  Dependencies.toml  Package.md  README.md  api_config.bal  international_patient_connect.bal  service.bal  smart_configuration_generator.bal  utils.bal
.github/workflows/: cd-executor.yml  cd-hl7v2-to-fhir.yml  cd-publishRelease.yml  ci-go.yml  ci.yml  daily-build.yml  release-fhir-server.yml
ai-agents/fhir-questionnaire-generation/: .dockerignore  .env.example  .gitignore  .trivyignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main_openapi.yaml
ai-agents/fhir-questionnaire-generation/data_ingestion_pipeline/pdf_to_md_service/: .gitignore  README.md  file_utils.py  ftp_utils.py  main.py  models.py  pyproject.toml  requirements.txt  settings.py  utils.py
ai-agents/fhir-questionnaire-generation/data_ingestion_pipeline/pdf_to_md_service/.choreo/: component.yaml
ai-agents/payer-agent-demo/: README.md
ai-agents/payer-agent-demo/a2a_mcp/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  startup.sh
ai-agents/payer-agent-demo/a2a_mcp/.choreo/: component.yaml
ai-agents/payer-agent-demo/a2a_mcp/tools/: conversational_tools.py
ai-agents/payer-agent-demo/a2a_mcp/utils/: configs.py
conformance/metadata-fhirr4-service/: Ballerina.toml  Config.toml  Dependencies.toml  README.md  capability_statement_generator.bal  model_config.bal  service.bal  utils_generator.bal
conformance/smart-config-fhirr4-service/: Ballerina.toml  Config.toml  README.md  (+4 more)
tests/: service_test.bal
(+690 files in other folders)
