[project]
name = "a2a-mcp"
version = "0.1.0"
description = "A2A MCP Server for agent-to-agent communication"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "mcp[cli]>=1.13.1",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
]
