[project]
name = "pdf-to-md-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "h11>=0.16.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf4llm>=1.27.2.3",
    "python-multipart>=0.0.30",
    "starlette>=1.2.1",
    "urllib3>=2.7.0",
    "uvicorn>=0.48.0",
]
